syntax = "proto2";

message FilePointer {
    required uint32 size = 1;
    required string url = 2;
    required string usedBits = 3;
}

message IndexFile {
    // linked list
    required bool ended = 1;
    optional FilePointer next = 2;
    repeated FilePointer chunks = 3;
}

message BootloaderFile {
    required uint32 fileSize = 1;
    required uint32 chunkSize = 2;
    required string fileName = 3;
    required bytes aesKey = 4;
    required bytes aesIV = 5;
    required FilePointer indexFile = 6;
}

message BootloaderDescription {
    enum SinkType {
        SinkType_BILIBILI_BFS_ALBUM = 1;
        SinkType_WEIBO_WX_SINAIMG = 2;
    }
    required string id = 1;
    required SinkType type = 2;
    required uint32 size = 3;
    required string usedBits = 4;
    required bytes password = 5;
}
